implementing update functionality