@@ -10,7 +10,7 @@ import guru.springframework.domain.Category;
 
 class CategoryToCategoryCommandTest {
 	
-	public static final Long ID_VALUE = new Long(1L);
+	public static final Long ID_VALUE = Long.valueOf(1L);
     public static final String DESCRIPTION = "descript";
     CategoryToCategoryCommand converter;
 
