@@ -11,7 +11,7 @@ import guru.springframework.domain.Notes;
 
 class NotesCommandToNotesTest {
 	
-	public static final Long ID_VALUE = new Long(1L);
+	public static final Long ID_VALUE = Long.valueOf(1L);
 	public static final String RECIPE_NOTES = "Notes";
 	NotesCommandToNotes converter;
 	    
